--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MY RESUME</title>
 </head>
 <body>
-    <img src="pic1.jpg" alt="my pic" style="height: 200px;"><br />
+    <img src="pic1.JPG" alt="my pic" style="height: 200px;"/> <br />
     <h1>Modinat Hamzat</h1>
     <h2>Fullstack Web Developer</h2>
     
@@ -40,4 +40,5 @@
 
 
 </body>
+
 </html>
